End of section 11

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "da4uwrfzs",
+    "ApiKey": "223936175854362",
+    "ApiSecret": "ENDPNih5VqzW1kOewrEYhp8Sr6U"
+  }
 }
